# template-extension-new-model

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: pytest.yml  ruff.yml
asreviewcontrib/models/: __init__.py  _version.py  example_model.py  nb_default_param.py
tests/: test_model.py
